Amélioration du .env.exemple, ajout list receiver

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,7 +1,5 @@
-RECEIVER = ""
+RECEIVER_LIST = ["",""]
 SENDER = ""
-PASSWORD_NICO = ""
 PASSWORD_SCIPT_MAIL = ""
-URL_PEOPLE_CELEBRATION = ""
 URL_PEOPLE_CELEBRATION_JSON = ""
 URL_DAY_CELEBRATION = ""
